--- a/src/App.scss
+++ b/src/App.scss
@@ -1,47 +1,27 @@
+@font-face {
+font-family: Montserrat-Regular;
+src: url(./fonts/Montserrat-Regular.ttf)
+}
+
+* {
+  font-family: Montserrat-Regular;
+}
+
 .App {
   text-align: center;
-  margin-left: 15%;
-  margin-right: 15%;
+  height: 100%;
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.buttonBox {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.topPart {
-  display: flex;
-  justify-content: center;
+  justify-content: space-around;
   flex-direction: row;
   align-items: center;
+
+}
+
+.mainInfo > p {
+  margin-right: 10px;
+  margin-left: 10px;
 }
