--- a/src/components/Hero.scss
+++ b/src/components/Hero.scss
@@ -1,25 +1,9 @@
-.hero {
+.mainInfo {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    flex-direction: row;
     align-items: center;
-  }
-  .card {
-    padding-left: 20px;
-    padding-right: 20px;
-    text-align: center;
-    border-radius: 12px;
-    background-color: rgba(240, 248, 255, 0.241);
-  }
-  img {
-    width: 150px;
-    margin: 20px;
-    border-radius: 20px;
-  }
-  h2 {
-    color: black;
-    text-shadow: 2px 2px rgba(240, 248, 255, 0.241);
-  }
-  a {
-    color: #0b0089;
-    text-decoration: none;
+    margin-top: 50px;
+    margin-left: 15%;
+    margin-right: 15%;
   }
