--- a/src/App.scss
+++ b/src/App.scss
@@ -11,17 +11,53 @@ src: url(./fonts/Montserrat-Regular.ttf)
   text-align: center;
   height: 100%;
   width: 100%;
+  font-size: 62.5%;
+}
+
+header {
+  font-size: 1.4rem;
+}
+
+main {
+  font-size: 1.0rem;
+}
+
+footer{
+  font-size: 1.0rem;
 }
 
 .buttonBox {
   display: flex;
   justify-content: space-around;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-
+  height: 300px;
+  font-size: 1.3rem;
+  width: 50%;
+  border-right: 2px solid black;
 }
 
-.mainInfo > p {
-  margin-right: 10px;
-  margin-left: 10px;
+.buttonBox > span:hover {
+  cursor: pointer;
+}
+
+.bottomPart {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: flex-start;
+  padding-top: 20px;
+  margin-left: 20%;
+  margin-right: 20%;
+  border-top: 2px solid black;
+  height: 400px;
+}
+
+.bottomInfo {
+  width: 50%;
+  margin-left: 20px;
+}
+
+.underlinedButton {
+    text-decoration: underline;
 }
