--- a/src/components/Hero.scss
+++ b/src/components/Hero.scss
@@ -3,7 +3,13 @@
     justify-content: center;
     flex-direction: row;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 30px;
     margin-left: 15%;
     margin-right: 15%;
+    border-bottom: 2px solid black;
+  }
+
+  .mainInfo > p {
+    margin-right: 10px;
+    margin-left: 10px;
   }
