--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    background-color: gray;
+    background-color: #6A5ACD;
     height: 150px;
   }
 
@@ -20,7 +20,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: gray;
+    background-color: #6A5ACD;
     border-style: solid;
     border-width: 1px;
     border-color: black;
