--- a/src/components/Skills.scss
+++ b/src/components/Skills.scss
@@ -34,6 +34,7 @@ $porcent-vue: 0;
 	justify-content: center;
 	align-items: center;
 	min-height: 20vh;
+	margin-top: 20px;
 	background-color: $color-black;
 }
 
